# Roadmap_MLops

./: .gitignore  README.md  controle_versao.md  controle_versao1.md  main.py  pyproject.toml  requirements.txt  run_dashboard.py
.dvc/: config
.github/workflows/: ci.yml
data/: cripto.db.dvc
src/: __init__.py  api_client.py  backup_manager.py  dashboard.py  data_processor.py  database.py  dvc_versioning.py  email_alert.py  logger.py  schemas.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_flow.py
tests/unit/: test_api_client.py  test_data_processor.py  test_database.py  test_dvc_versioning.py  test_email_alert.py  test_schemas.py
